# xiic-ssh-mcp

./: .gitignore  Cargo.toml  README.md  install.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: auto-release.yml  ci.yml  release.yml
approval-tauri/: Cargo.toml  tauri.conf.json
approval-tauri/capabilities/: default.json
approval-tauri/icons/: icon.icns
approval-tauri/src/: main.rs
scripts/: prepare-tauri-bundle.mjs
src/: app_core.rs  approval.rs  broker.rs  config.rs  credentials.rs  lib.rs  local_ipc.rs  main.rs  mcp.rs  mcp_protocol.rs  mcp_service.rs  models.rs  paths.rs  session.rs  settings.rs  single_instance.rs  storage.rs  whitelist.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
web/: approval.html  index.html
web/src/: App.tsx  approval.tsx  main-approval.tsx  styles.css
