[package]
name = "xiic-ssh-mcp"
version = "0.1.2"
edition = "2024"

[lib]
name = "xiic_ssh_mcp"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
keyring = "3.6.3"
libc = "0.2.177"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading"] }
