[package]
name = "xiic-ssh-approval"
version = "0.1.1"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.11.0", features = [] }
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "time"] }
xiic-ssh-mcp = { path = ".." }
