[package]
name = "xiic-ssh-manager-desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tokio = { version = "1", features = ["net", "io-util", "rt", "time"] }
xiic-ssh-mcp = { path = ".." }
